--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "swagger-ui-react": "^5.18.2"
+    "swagger-ui-react": "^5.18.2", 
+    "canvafy": "^7.2.0"
   }
 }
