--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "cheerio": "^1.0.0",
     "next": "15.0.3",
     "node-fetch": "^3.3.2",
-    "puppeteer": "^24.1.1",  
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "swagger-ui-react": "^5.18.2",
     "canvafy": "^7.2.0",
-    "canvas": "^3.0.1"
+    "canvas": "^3.0.1",
+    "puppeteer-core": "^19.0.0"
   }
 }
