--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-dom": "^18.0.0",
     "swagger-ui-react": "^5.18.2",
     "canvafy": "^7.2.0",
-    "canvas": "^3.0.1",
-    "puppeteer-core": "^19.0.0"
+    "canvas": "^3.0.1"
   }
 }
